update other configs to more up to date version that i use

--- a/dotfiles/other_configs/Dark-Reader-Settings.json
+++ b/dotfiles/other_configs/Dark-Reader-Settings.json
@@ -25,14 +25,128 @@
         "immediateModify": false
     },
     "presets": [],
-    "customThemes": [],
+    "customThemes": [
+        {
+            "builtIn": true,
+            "theme": {
+                "mode": 1,
+                "brightness": 100,
+                "contrast": 100,
+                "grayscale": 0,
+                "sepia": 0,
+                "useFont": false,
+                "fontFamily": "Segoe UI",
+                "textStroke": 0,
+                "engine": "cssFilter",
+                "stylesheet": "",
+                "darkSchemeBackgroundColor": "#181a1b",
+                "darkSchemeTextColor": "#e8e6e3",
+                "lightSchemeBackgroundColor": "#dcdad7",
+                "lightSchemeTextColor": "#181a1b",
+                "scrollbarColor": "",
+                "selectionColor": "auto",
+                "styleSystemControls": false,
+                "lightColorScheme": "Default",
+                "darkColorScheme": "Default",
+                "immediateModify": false
+            },
+            "url": [
+                "*.officeapps.live.com"
+            ]
+        },
+        {
+            "builtIn": true,
+            "theme": {
+                "mode": 1,
+                "brightness": 100,
+                "contrast": 100,
+                "grayscale": 0,
+                "sepia": 0,
+                "useFont": false,
+                "fontFamily": "Segoe UI",
+                "textStroke": 0,
+                "engine": "cssFilter",
+                "stylesheet": "",
+                "darkSchemeBackgroundColor": "#181a1b",
+                "darkSchemeTextColor": "#e8e6e3",
+                "lightSchemeBackgroundColor": "#dcdad7",
+                "lightSchemeTextColor": "#181a1b",
+                "scrollbarColor": "",
+                "selectionColor": "auto",
+                "styleSystemControls": false,
+                "lightColorScheme": "Default",
+                "darkColorScheme": "Default",
+                "immediateModify": false
+            },
+            "url": [
+                "*.sharepoint.com"
+            ]
+        },
+        {
+            "builtIn": true,
+            "theme": {
+                "mode": 1,
+                "brightness": 100,
+                "contrast": 100,
+                "grayscale": 0,
+                "sepia": 0,
+                "useFont": false,
+                "fontFamily": "Segoe UI",
+                "textStroke": 0,
+                "engine": "cssFilter",
+                "stylesheet": "",
+                "darkSchemeBackgroundColor": "#181a1b",
+                "darkSchemeTextColor": "#e8e6e3",
+                "lightSchemeBackgroundColor": "#dcdad7",
+                "lightSchemeTextColor": "#181a1b",
+                "scrollbarColor": "",
+                "selectionColor": "auto",
+                "styleSystemControls": false,
+                "lightColorScheme": "Default",
+                "darkColorScheme": "Default",
+                "immediateModify": false
+            },
+            "url": [
+                "docs.google.com"
+            ]
+        },
+        {
+            "builtIn": true,
+            "theme": {
+                "mode": 1,
+                "brightness": 100,
+                "contrast": 100,
+                "grayscale": 0,
+                "sepia": 0,
+                "useFont": false,
+                "fontFamily": "Segoe UI",
+                "textStroke": 0,
+                "engine": "cssFilter",
+                "stylesheet": "",
+                "darkSchemeBackgroundColor": "#181a1b",
+                "darkSchemeTextColor": "#e8e6e3",
+                "lightSchemeBackgroundColor": "#dcdad7",
+                "lightSchemeTextColor": "#181a1b",
+                "scrollbarColor": "",
+                "selectionColor": "auto",
+                "styleSystemControls": false,
+                "lightColorScheme": "Default",
+                "darkColorScheme": "Default",
+                "immediateModify": false
+            },
+            "url": [
+                "onedrive.live.com"
+            ]
+        }
+    ],
     "enabledByDefault": true,
     "enabledFor": [
-        "forum.xda-developers.com"
+        "forum.xda-developers.com",
+        "dash.cloudflare.com"
     ],
     "disabledFor": [
+        "home.netlexvault.com",
         "127.0.0.1:7860",
-        "www.youtube.com",
         "excalith-start-page.vercel.app",
         "www.bing.com",
         "localhost:5000",
@@ -98,7 +212,9 @@
         "192.168.1.148:8101",
         "speedtest.netlexvault.com",
         "excalidraw.com",
+        "pl.nothing.tech",
         "www.mi.com",
+        "www.ceneo.pl",
         "www.dolby.com",
         "roborock-poland.pl",
         "192.168.1.148:8487",
@@ -115,7 +231,6 @@
         "onedrive.live.com",
         "comfyworkflows.com",
         "192.168.1.148:5001",
-        "dockge.netlexvault.com",
         "www.demolandia.net",
         "www.loc.gov",
         "192.168.1.148:6942",
@@ -124,25 +239,89 @@
         "accesto.com",
         "authentik.netlexvault.com",
         "ytdl.netlexvault.com",
-        "dash.cloudflare.com",
         "miro.com",
         "drive.google.com",
         "help.obsidian.md",
         "vw.netlexvault.com",
         "www.meteo.pl",
-        "hexos.com",
-        "prezentify.pl",
-        "brickcraft.de",
-        "www.songsterr.com",
+        "beszel.netlexvault.com",
+        "wu10.umed.lodz.pl",
+        "my.nextdns.io",
+        "vpntorrent.netlexvault.com",
+        "dockge.netlexvault.com",
         "pl.aliexpress.com",
-        "www.openstreetmap.org",
-        "pl.nothing.tech",
-        "allegro.pl",
-        "home.netlexvault.com",
-        "uninstalr.com",
-        "www.pracuj.pl",
-        "cv.pracuj.pl",
-        "proton.me"
+        "oracle-flex:3001",
+        "oracle-flex:5001",
+        "arstechnica.com",
+        "paperless.netlexvault.com",
+        "pdf.netlexvault.com",
+        "privtorrent.netlexvault.com",
+        "mt.piratawka.pl",
+        "gemini.google.com",
+        "sonarr.netlexvault.com",
+        "radarr.netlexvault.com",
+        "app.element.io",
+        "edu.aidental.ai",
+        "beta.drunkdeer-antler.com",
+        "www.songsterr.com",
+        "ping-test.net",
+        "[fe80::369f:7bff:fe3e:4ad8]",
+        "wud.netlexvault.com",
+        "www.ledr.com",
+        "www.gigabyte.com",
+        "pl.msi.com",
+        "www.testufo.com",
+        "bambulab.com",
+        "www.philips.pl",
+        "192.168.1.148:3027",
+        "www.scribd.com",
+        "www.cez.gov.pl",
+        "pocket.netlexvault.com",
+        "romm.netlexvault.com",
+        "wiki.bambulab.com",
+        "eu.store.bambulab.com",
+        "www.orange.pl",
+        "imgw.pl",
+        "komodo.netlexvault.com",
+        "search.brave.com",
+        "makerworld.com",
+        "www.perplexity.ai",
+        "karakeep.netlexvault.com",
+        "git.netlexvault.com",
+        "seedpool.org",
+        "selfh.st",
+        "palmr.kyantech.com.br",
+        "sink.cool",
+        "prowlarr.netlexvault.com",
+        "www.tinkercad.com",
+        "www.meshcommander.com",
+        "msl.org.pl",
+        "mail.proton.me",
+        "situational-awareness.ai",
+        "icons8.com",
+        "img-to-svg.com",
+        "192.168.1.148:11810",
+        "oracle-flex:11810",
+        "meet.google.com",
+        "studumedlodz-my.sharepoint.com",
+        "www.facebook.com",
+        "wiersze.juniora.pl",
+        "ekskursje.pl",
+        "comparia.beta.gouv.fr",
+        "chatgpt.com",
+        "www.aliexpress.com",
+        "qui.netlexvault.com",
+        "www.artstation.com",
+        "eu-main.iniushop.com",
+        "plugins.traefik.io",
+        "ui.com",
+        "pocket-id.org",
+        "oracle-flex:8080",
+        "pufferpanel.netlexvault.com",
+        "panel.netlexvault.com",
+        "www.youtube.com",
+        "memos.netlexvault.com",
+        "hearthstone.blizzard.com"
     ],
     "changeBrowserTheme": false,
     "syncSettings": true,
@@ -162,14 +341,21 @@
         "longitude": null
     },
     "previewNewDesign": true,
+    "previewNewestDesign": false,
     "enableForPDF": false,
     "enableForProtectedPages": false,
     "enableContextMenus": false,
     "detectDarkTheme": true,
     "automationBehaviour": "OnOff",
     "displayedNews": [
-        "news-2023"
+        "news-2023",
+        "google-docs-bugs"
     ],
+    "installation": {
+        "date": 1738724595361,
+        "reason": "update",
+        "version": "4.9.96"
+    },
     "readNews": [
         "news-2023"
     ]
